Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.1, 5.9.3, 5.10.0 RC, 5.10.0, 5.9.4, 5.10.1, 5.11.0 Alpha
-
None
-
Gnome shell (Wayland)
Kwin
Description
Crash: QScreen::geometry is called on nullptr when a new wl_output is announced
If you have a dual monitor setup, do the following:
1. Run a Qt application on Wayland
2. Disconnect your monitor
3. Reconnect your monitor
Attachments
Issue Links
- is duplicated by
-
QTBUG-64845 Wayland Clients SegFault when second monitor is connected
-
- Closed
-